💄 style: update style

--- a/SwashbucklerDiary/Components/DialogComponents/PreviewImageDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PreviewImageDialog.razor
@@ -6,7 +6,7 @@
           Eager="true"
           Fullscreen="true"
           Transition="@(null)">
-    <MCard Class="fill-height theme-element d-flex flex-column"
+    <MCard Class="fill-height primary-background d-flex flex-column"
            Ripple="false">
         <MToolbar Class="flex-grow-0"
                   Style="z-index:2;background-color:transparent;"
