--- a/SwashbucklerDiary/Components/MyComponents/MyFloatButton.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyFloatButton.razor
@@ -1,4 +1,5 @@
 ﻿@namespace SwashbucklerDiary.Components
+@implements IDisposable
 
 <FabTransition>
     <MButton Class="my-btn-fab elevation-2"
@@ -6,6 +7,7 @@
              Right="true"
              Fixed="true"
              Fab="true"
+             Large="Desktop"
              OnClick="OnClick">
         <MIcon>
             @Icon
@@ -14,8 +16,30 @@
 </FabTransition>
 
 @code {
+    [Inject]
+    private MasaBlazor MasaBlazor { get; set; } = default!;
+
     [Parameter]
     public string? Icon { get; set; }
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
+
+    public void Dispose()
+    {
+        MasaBlazor.BreakpointChanged -= InvokeStateHasChanged;
+        GC.SuppressFinalize(this);
+    }
+
+    protected override Task OnInitializedAsync()
+    {
+        MasaBlazor.BreakpointChanged += InvokeStateHasChanged;
+        return base.OnInitializedAsync();
+    }
+
+    private bool Desktop => MasaBlazor.Breakpoint.MdAndUp;
+
+    private void InvokeStateHasChanged(object? sender, BreakpointChangedEventArgs e)
+    {
+        InvokeAsync(StateHasChanged);
+    }
 }
