--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -46,7 +46,7 @@
 </MAppBar>
 
 <ScrollContainer>
-    <div id="screenshot" class="theme-element">
+    <div id="screenshot" class="primary-background">
         <div class="px-3 d-flex align-end">
             <span class="text-h6 font-weight-bold">
                 @(Diary.CreateTime.ToString("yyyy/MM/dd"))
