--- a/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
+++ b/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
@@ -22,7 +22,7 @@
                 <MListItem Ripple="false"
                            OnClick="item.OnClick">
                     <MListItemIcon>
-                        <MIcon Size="@(activated?30:24)">
+                        <MIcon Size="24">
                             @(activated ? item.SelectedIcon : item.Icon)
                         </MIcon>
                     </MListItemIcon>
