--- a/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog/FirstLaunchAgreement.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog/FirstLaunchAgreement.razor
@@ -12,11 +12,9 @@
     </MContainer>
 
     <div class="d-flex flex-column flex-sm-row-reverse">
-        <MButton Class="mb-5 flex-grow-1 ml-sm-2"
+        <MButton Class="agreement-confirm-btn mb-5 flex-grow-1 ml-sm-2"
                  Rounded="true"
                  Large="true"
-                 Dark="true"
-                 Color="black"
                  OnClick="OnOK">
             @(I18n.T("AgreementAndPolicy.Agree"))
         </MButton>
