--- a/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog/FirstLaunchDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog/FirstLaunchDialog.razor
@@ -2,7 +2,7 @@
 
 @if (Show)
 {
-    <div class="my-first-launch-card">
+    <div class="my-first-launch-card primary-background">
         <ScrollContainer Class="d-flex align-center"
                          Style="width:100%;"
                          ContentClass="d-flex justify-center">
