--- a/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
@@ -2,36 +2,35 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MAppBar App="true"
-         Elevation="0">
+<MyAppBar>
     <MButton Icon
-             OnClick="NavigateToBack">
-        <MIcon>
-            mdi-arrow-left
-        </MIcon>
-    </MButton>
-    <MTabs @bind-Value="tab"
-           ActiveClass="text-h6 font-weight-bold"
-           HideSlider="true">
-        <MTab Class="my-tab"
-              Ripple="false">
-            @(I18n.T("Backups.Local.Name"))
-        </MTab>
-        <MTab Class="my-tab"
-              Ripple="false">
-            @(I18n.T("Backups.WebDAV.Name"))
-        </MTab>
-    </MTabs>
-    <MSpacer></MSpacer>
-</MAppBar>
+              OnClick="NavigateToBack">
+         <MIcon>
+             mdi-arrow-left
+         </MIcon>
+     </MButton>
+     <MTabs @bind-Value="tab"
+            ActiveClass="text-h6 font-weight-bold"
+            HideSlider="true">
+         <MTab Class="my-tab"
+               Ripple="false">
+             @(I18n.T("Backups.Local.Name"))
+         </MTab>
+         <MTab Class="my-tab"
+               Ripple="false">
+             @(I18n.T("Backups.WebDAV.Name"))
+         </MTab>
+     </MTabs>
+     <MSpacer></MSpacer>
+ </MyAppBar>
 
-<SwiperTabItems @bind-Value="tab">
-    <SwiperTabItem>
-        <LocalBackups></LocalBackups>
-    </SwiperTabItem>
-    <SwiperTabItem>
-        <WebDAVBackups></WebDAVBackups>
-    </SwiperTabItem>
-</SwiperTabItems>
+ <SwiperTabItems @bind-Value="tab">
+     <SwiperTabItem>
+         <LocalBackups></LocalBackups>
+     </SwiperTabItem>
+     <SwiperTabItem>
+         <WebDAVBackups></WebDAVBackups>
+     </SwiperTabItem>
+ </SwiperTabItems>
 
 
