--- a/SwashbucklerDiary/Components/MyComponents/LocationCard/LocationCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/LocationCard/LocationCard.razor
@@ -22,7 +22,7 @@
             <MListItemAction>
                 <div @onclick:stopPropagation="true">
                     <MultiMenu @bind-Value="ShowMenu"
-                               ListItemModels="ListItemModels">
+                               DynamicListItems="MenuItems">
                         <ButtonContent>
                             <MIcon>mdi-pencil-outline</MIcon>
                         </ButtonContent>
