--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiMenu.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiMenu.razor
@@ -15,7 +15,7 @@
             <ChildContent>
                 <MCard Class="rounded-t-lg py-2">
                     <MList>
-                        @foreach (var item in ListItemModels)
+                        @foreach (var item in DynamicListItems)
                         {
                             <MListItem OnClick="()=>OnClick(item.OnClick)">
                                 <MListItemIcon>
@@ -27,7 +27,7 @@
                                     @(I18n.T(item.Text))
                                 </MListItemContent>
                             </MListItem>
-                            if (ListItemModels.Last() != item)
+                            if (DynamicListItems.Last() != item)
                             {
                                 <MDivider></MDivider>
                             }
@@ -62,7 +62,7 @@
             </ActivatorContent>
             <ChildContent>
                 <MList MinWidth="150">
-                    @foreach (var item in ListItemModels)
+                    @foreach (var item in DynamicListItems)
                     {
                         <MListItem Dense="true"
                                    OnClick="()=>OnClick(item.OnClick)">
