--- a/SwashbucklerDiary/Pages/Index/IndexMine.razor
+++ b/SwashbucklerDiary/Pages/Index/IndexMine.razor
@@ -196,7 +196,7 @@
 
 <MultiDialog @bind-Value="ShowFeedback"
              Title="@(I18n.T("Mine.ContactWay"))"
-             ListItemModels="FeedbackTypes">
+             DynamicListItems="FeedbackTypes">
 </MultiDialog>
 
 <PreviewImageDialog @bind-Value="ShowPreviewImage"
