--- a/SwashbucklerDiary/Pages/Mine/UserPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/UserPage.razor
@@ -94,7 +94,7 @@
 
  <MultiDialog @bind-Value="ShowEditAvatar"
               Title="@(I18n.T("User.EditAvatar"))"
-              ListItemModels="EditAvatarMethods">
+              DynamicListItems="EditAvatarMethods">
  </MultiDialog>
 
  <InputDialog @bind-Value="ShowEditUserName"
