--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -30,7 +30,7 @@
     </MButton>
 
     <MultiMenu @bind-Value="ShowMenu"
-               ListItemModels="ListItemModels">
+               DynamicListItems="MenuItems">
         <ButtonContent>
             <MultiDisplay>
                 <DesktopContent>
