--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -11,7 +11,8 @@
 
             <MMain>
                 <PPageContainerExtension>
-                    <CascadingValue Value="@_options" IsFixed="true">
+                    <CascadingValue Value="@_options"
+                                    IsFixed="true">
                         @Body
                     </CascadingValue>
                 </PPageContainerExtension>
