--- a/SwashbucklerDiary/Components/DialogComponents/ShareDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/ShareDialog.razor
@@ -4,5 +4,5 @@
 <MultiDialog Value="Value"
              ValueChanged="ValueChanged"
              Title="@(I18n.T("Share.SelectShare"))"
-             ListItemModels="Items">
+             DynamicListItems="Items">
 </MultiDialog>
