--- a/SwashbucklerDiary/Components/MyComponents/TagCard/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard/TagCard.razor
@@ -29,7 +29,7 @@
             <MListItemAction>
                 <div @onclick:stopPropagation="true">
                     <MultiMenu @bind-Value="ShowMenu"
-                               ListItemModels="ListItemModels">
+                               DynamicListItems="MenuItems">
                         <ButtonContent>
                             <MIcon>mdi-pencil-outline</MIcon>
                         </ButtonContent>
