--- a/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
@@ -31,7 +31,7 @@
     </MButton>
 
     <MultiMenu @bind-Value="ShowMenu"
-               ListItemModels="ListItemModels">
+               DynamicListItems="MenuItems">
         <ButtonContent>
             <MultiDisplay>
                 <DesktopContent>
