--- a/SwashbucklerDiary/_Imports.razor
+++ b/SwashbucklerDiary/_Imports.razor
@@ -9,6 +9,6 @@
 @using BlazorComponent
 @using SwashbucklerDiary
 @using SwashbucklerDiary.Shared
-@using SwashbucklerDiary.Extend
+@using SwashbucklerDiary.Extensions
 @using SwashbucklerDiary.Models
 @using SwashbucklerDiary.Components
