--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -18,8 +18,8 @@
                     </span>
                     @if (ShowIcon)
                     {
-                        <DiaryCardIcon Value="@GetWeatherIcon()" />
-                        <DiaryCardIcon Value="@GetMoodIcon()" />
+                        <DiaryCardIcon Value="@WeatherIcon" />
+                        <DiaryCardIcon Value="@MoodIcon" />
                     }
                 </div>
             </MListItemContent>
