--- a/SwashbucklerDiary/Pages/Index/IndexHistory/IndexHistory.razor
+++ b/SwashbucklerDiary/Pages/Index/IndexHistory/IndexHistory.razor
@@ -25,7 +25,7 @@
 
     <MSpacer></MSpacer>
     <MButton Icon="true"
-             OnClick="()=>ShowExportTime=true">
+             OnClick="ExportThisTime">
         <MIcon>
             mdi-export
         </MIcon>
@@ -49,7 +49,7 @@
 
     <DiaryCardList @bind-Tags="Tags"
                    Value="PickerDiaries"
-                   OnUpdate="UpdateEventsDates">
+                   OnRemove="HandleOnRemove">
     </DiaryCardList>
 </ScrollContainer>
 
@@ -59,11 +59,6 @@
               EventColor='"primary"'>
 </MyDatePicker>
 
-<MultiDialog @bind-Value="ShowExportTime"
-             Title="@(I18n.T("History.ExportTime.Name"))"
-             DynamicListItems="ExportTimeItems">
-</MultiDialog>
-
-<ExportDialog @bind-Value="ShowExport"
-              Diaries="ExportDiaries">
-</ExportDialog>
+<ExportThisTimeDialog @bind-Value="ShowExportThisTime"
+                      PickedDate="PickedDate">
+</ExportThisTimeDialog>
